fixed responsiveness plus text shadow on dropdown on smaller devices

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -361,6 +361,30 @@
 
 }
 
+@media (max-width: 375px) {
+  #h1-playing {
+    text-align: center;
+    margin: 26px;
+    margin-bottom: 25px;
+    font-size: 23px !important;
+  }
+  .add-game {
+    padding: 5px 11px;
+    font-size: 12px;;
+  }
+  .navbar-navright {
+    color: white;
+    font-family: 'Raleway';
+    text-shadow: none !important;
+    animation: none !important;
+    transition: none !important;
+    -webkit-text-shadow: none !important;
+    -moz-text-shadow: none !important;
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+  }
+}
+
 @media (max-width: 333px) {
   .navbar-brand {
     font-size: 10px;
@@ -397,6 +421,18 @@
     margin-top: 20px;
   }
 
+  .navbar-navright {
+    color: white;
+    font-family: 'Raleway';
+    text-shadow: none !important;
+    animation: none !important;
+    transition: none !important;
+    -webkit-text-shadow: none !important;
+    -moz-text-shadow: none !important;
+    -webkit-animation: none !important;
+    -moz-animation: none !important;
+  }
+
 
   // Add game page
   #game_title {
@@ -414,7 +450,7 @@
     text-align: center;
     margin: 26px;
     margin-bottom: 25px;
-    font-size: 29px !important;
+    font-size: 23px !important;
   }
   #h1-plan {
     text-align: center;
@@ -422,11 +458,8 @@
     margin-bottom: 25px;
     font-size: 29px !important;
   }
-  #h1-playing {
-    text-align: center;
-    margin: 26px;
-    margin-bottom: 25px;
-    font-size: 29px !important;
+  .add-game {
+    padding: 5px 11px;
   }
 
   input.addgamefield, select {
